--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.3",
+    "@react-spring/web": "^9.7.3",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.15.19",
     "react": "^18.3.1",
@@ -19,5 +21,4 @@
     "vite": "^5.4.0"
   }
 }
-
 
