--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,7 @@ httpx==0.27.2
 chromadb>=0.5.5
 openai>=1.0.0
 numpy>=1.24.0
+# Testing dependencies
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
