--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-python-dotenv==1.0.1
+python-dotenv>=1.1.0
 Pillow==10.4.0
 google-genai==0.3.0
 typing-extensions>=4.12.2
 pydantic==2.9.2
-httpx==0.27.2
+httpx>=0.28.1
+mcp>=1.9.4,<2.0.0
 chromadb>=0.5.5
 openai>=1.0.0
 numpy>=1.24.0
